--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=inua_mkulima_backend
+spring.application.name=inua_mkulima_backend\
+  
+spring.datasource.url=jdbc:postgresql://localhost:5432/inuamkulima
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
