add Farmer entity, DTO, service, and controller for farmer management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=inua_mkulima_backend\
+spring.application.name=inua_mkulima_backend
   
 spring.datasource.url=jdbc:postgresql://localhost:5432/inuamkulima
 spring.datasource.username=postgres
